# voice-to-text

./: .dockerignore  .env.example  .env.opensource  .env.sarvam  .gitignore  Dockerfile  Dockerfile.beat  Dockerfile.worker-cpu  Dockerfile.worker-gpu  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py
app/api/: __init__.py  celery_sender.py  dependencies.py  errors.py  idempotency.py  main.py
app/clustering/: centroids.py  drift.py  engine.py  hdbscan_runner.py  incremental.py  quality.py
app/core/: config.py  langsmith_tracing.py  logging.py  observability.py
app/data/: disposition_crosswalk.yaml
app/db/: base.py  models.py  repositories.py  session.py
app/diagnostics/: __init__.py  cluster_metrics.py  report.py
app/models/: enums.py  schemas.py
docs/: DEVELOPMENT_GUIDE.html  DEVELOPMENT_GUIDE.md  architecture.md  contracts.md  deployment.md  gpu_sizing.md
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
scripts/: export-corp-cas.ps1  install-corp-ca.ps1  mock_api.py
transcripts/: 006cb455_transcript.txt  1203b825_transcript.txt  2e09593a_transcript.txt  48f3ce95_transcript.txt  4ca62459_transcript.txt  7233d229_transcript.txt  73352786_transcript.txt  8a92a512_transcript.txt  984a1d27_transcript.txt  a6ba318b_transcript.txt  aad0bf96_transcript.txt  b91255d6_transcript.txt  c57230c0_transcript.txt  cc14327a_transcript.txt  cc4a75d1_transcript.txt  de666d69_transcript.txt  e4946e89_transcript.txt  e8896ea3_transcript.txt
(+190 files in other folders)
